tests/ui/feature-gates/feature-gate-inline_const.stderr
error[E0658]: inline-const is experimental
  --> $DIR/feature-gate-inline_const.rs:2:13
   |
LL |     let _ = const {
   |             ^^^^^
   |
   = note: see issue #76001 <https://github.com/crablang/crablang/issues/76001> for more information
   = help: add `#![feature(inline_const)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
